[package]
name = "wiki"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "wiki"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
colored = "3"
textwrap = "0.16"
html2text = "0.14"
urlencoding = "2"
terminal_size = "0.4"
clap_complete = "4"
